<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top">
        <Button
            android:id="@+id/history"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/history"/>
        <Button
            android:id="@+id/setup"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/setup"/>
    </LinearLayout>
    <ImageView
        android:layout_weight="5"
        android:background="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom">

        <Button
            android:id="@+id/camera_process"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/start"/>
    </LinearLayout>

</LinearLayout>
